# bumpdeps

./: README.rst  bumpdeps.py  noxfile.py  pylintrc  pyproject.toml
.github/workflows/: tests.yml
tests/: __init__.py  test_bumpdeps.py  test_main.py
