[build-system]
requires = ['setuptools >= 65', 'setuptools_scm[toml] >= 6.2']
build-backend = 'setuptools.build_meta'

[project]
name = 'bumpdeps'
description = 'Utility for bumping dependency versions specified in pyproject.toml files'
authors = [
    {name = 'Avram Lubkin', email = 'avylove@rockhopper.net'},
]
classifiers = [
    'Programming Language :: Python :: 3',
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)',
    'Topic :: Software Development',
]
dependencies = [
    'packaging',
    'requests',
    'tomlkit',
]

dynamic = ['version']
requires-python = '>=3.7'
license = {text = 'MPLv2.0'}
readme = 'README.rst'
keywords = ['bump', 'dependency', 'dependencies', 'versions', 'extras']

[project.optional-dependencies]
tests = [
    "responses",
]

[project.scripts]
bumpdeps = 'bumpdeps:main'


[project.urls]
Homepage = 'https://github.com/Rockhopper-Technologies/bumpdeps'

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
	'pragma: no cover',
	"if __name__ == '__main__':",
]

[tool.coverage.run]
branch = true
omit = ['tests/*']

[tool.setuptools]
py-modules = ['bumpdeps']

[tool.setuptools.dynamic]
version = {attr = "bumpdeps.__version__"}
